chore: rename to raystack